IMG API testing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	    <script src="js/api.js"></script>
     </head>
     <body>
+        <h1 id="Code"></h1>
+        <img>
         <p id="output">Text</p>
+        <textarea id="override" placeholder="Type a 3 digit status code here to override"></textarea>
+        <button>Override</button>
     </body>
 </html>
