Not sure if it counts but I did image stuff

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
 	    <meta charset="utf-8" />
 	    <title>CS-JAss3</title>
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	    <script src="js/api.js"></script>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	    <script src="js/api.js" defer></script>
     </head>
     <body>
-        <h1 id="Code"></h1>
-        <img>
+        <h1 id="code"></h1>
+        <img id="statusimg" src="">
         <p id="output">Text</p>
-        <textarea id="override" placeholder="Type a 3 digit status code here to override"></textarea>
-        <button>Override</button>
+        <textarea id="overtxt" placeholder="Type a 3 digit status code here to override"></textarea>
+        <button id="overridebtn">Override</button>
     </body>
 </html>
