--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h1 id="code"></h1>
         <img id="statusimg" src="">
         <p id="output">Text</p>
-        <textarea id="overtxt" placeholder="Type a 3 digit status code here to override"></textarea>
+        <textarea id="overtxt" placeholder="Type a 3 digit status code here to override and see the image of"></textarea>
         <button id="overridebtn">Override</button>
+        <button id="newfactbtn">Get new fact</button>
     </body>
 </html>
